...
      body: SafeArea(
        child: Column(
          children: [
            const SizedBox(height: 24),

            const Text(
              'YOU LOST!',
              style: TextStyle(
                fontFamily: 'Monofett',
                fontSize: 60,
                color: Colors.white,
              ),
            ),
...
                        backgroundColor: secondColor,
                        shape: RoundedRectangleBorder(
                          borderRadius: BorderRadius.circular(40),
                        ),
                      ),
                      child: const Text(
                        'PLAY AGAIN',
                        textAlign: TextAlign.center,
                        style: TextStyle(
                          fontFamily: 'Monofett',
                          fontSize: 26,
                          color: Colors.white,
                          height: 1.0,
...
                        elevation: 0,
                        shape: RoundedRectangleBorder(
                          borderRadius: BorderRadius.circular(40),
                        ),
                      ),
                      child: const Text(
                        'EXIT',
                        style: TextStyle(
                          fontFamily: 'Monofett',
                          fontSize: 26,
                          color: Colors.white,
                        ),
                      ),
...
